@@ -21,6 +21,8 @@
 #include <glib-object.h>
 #include "uca-camera.h"
 
+G_BEGIN_DECLS
+
 #define UCA_TYPE_DEXELA_CAMERA             (uca_dexela_camera_get_type())
 #define UCA_DEXELA_CAMERA(obj)             (G_TYPE_CHECK_INSTANCE_CAST((obj), UCA_TYPE_DEXELA_CAMERA, UcaDexelaCamera))
 #define UCA_IS_DEXELA_CAMERA(obj)          (G_TYPE_CHECK_INSTANCE_TYPE((obj), UCA_TYPE_DEXELA_CAMERA))
@@ -61,8 +63,8 @@ struct _UcaDexelaCameraClass {
     UcaCameraClass parent;
 };
 
-UcaDexelaCamera *uca_dexela_camera_new(GError **error);
-
 GType uca_dexela_camera_get_type(void);
+
+G_END_DECLS
 
 #endif
