@@ -1,3 +1,5 @@
+* Tue Jul 29 2014 Mihael Koep <mihael.koep@softwareschneiderei.de> 1.2.0-1
+- bump plugin version for package management systems
 * Wed Mar 19 2014 Mihael Koep <mihael.koep@softwareschneiderei.de> 1.0.3-1
 - bump libdexela requirement to 1.1.0
 - use new libdexela API for FMT file
